Fix checkbox having wrong size in mobile

--- a/react/src/styles/App.module.scss
+++ b/react/src/styles/App.module.scss
@@ -22,6 +22,11 @@ input {
     outline: none;
     font-size: inherit;
     line-height: inherit;
+
+    &[type=checkbox] {
+        width: 0;
+        height: 0;
+    }
 }
 
 
